<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".total.TotalFragment"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/totalView"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_text"
            android:id="@+id/textView"
            android:layout_weight="0.15"
            android:textColor="@color/colorPrimarySave"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="0dp"
            android:gravity="bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="£32.42"
            android:id="@+id/totalValue"
            android:textColor="@color/colorPrimarySave"
            android:textSize="64sp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-light" />

        <include layout="@layout/target_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:text="@string/saveButton_text"
            android:id="@+id/button_add"
            style="@style/TotalButtonText.SaveButton" />

        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/wasteButton_text"
            android:id="@+id/button_waste"
            style="@style/TotalButtonText.WasteButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/addView"
        android:background="@color/colorPrimarySave"
        android:gravity="center"
        android:visibility="gone"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueSave_text"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="0dp"
            android:id="@+id/valueCaption"
            android:layout_weight="0.15"
            android:gravity="bottom" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valueDisplay"
            android:text="£2.32"
            android:textColor="#ffffff"
            android:textSize="64sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light" />

        <include layout="@layout/pad_numeric" />

    </LinearLayout>

    <Button
        android:id="@+id/add_animation"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/round_button_save"
        android:visibility="gone"
        app:layout_anchor="@id/button_add"
        app:layout_anchorGravity="center"/>

    <Button
        android:id="@+id/waste_animation"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/round_button_waste"
        android:visibility="gone"
        app:layout_anchor="@id/button_waste"
        app:layout_anchorGravity="center"/>

</android.support.design.widget.CoordinatorLayout>
